# flights-mcp

./: .gitignore  Dockerfile  README.md  pyproject.toml  pytest.ini
src/flights/: __init__.py  duffel_api.py  server.py  tools.py
src/flights/api/: client.py
tests/: test_duffel_api.py
